fix word break on mobile

--- a/public_html/css/pages/social.scss
+++ b/public_html/css/pages/social.scss
@@ -6,7 +6,7 @@ section.social {
   padding: 20px;
 
   background: $cs-dark2;
-  color: $cs-green4;
+  color: $cs-green3;
 
   h1 {
     font-family: Aleo;
